# wasm-micro-runtime

./: .gitignore  README.md  flake.nix  gmp-wasm.nix
core/iwasm/common/: wasm_memory.c
core/shared/platform/zephyr/: zephyr_platform.c
samples/native-lib/: CMakeLists.txt  native_gmp.c  test_add.c  test_hello2.c  test_rsa.c
samples/native-lib/wasm-app/: CMakeLists.txt  emcc.sh  test.c  test2.c
samples/native-lib/wasm-app-old/: CMakeLists.txt  main.c  main_benchmark.c  main_rsa.c  main_rsa2.c  main_tmp.c
samples/native-lib/wasm-app/cmake/: FindGMP.cmake
tests/benchmarks/polybench/: report.txt
wamr-sdk/app/libc-builtin-sysroot/share/: defined-symbols.txt
